Fix gap

--- a/style/style.css
+++ b/style/style.css
@@ -28,41 +28,81 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    width: 100%;
+    max-width: 300px;
 }
+
 .parent-container {
     display: flex;
     flex-direction: row;
     gap: 20px;
+    width: 100%;
+    max-width: 1160px;
+    margin: 0 auto;
 }
-/* Responsive design */
+
+.container {
+    display: flex;
+    gap: 30px;
+    align-items: flex-start;
+    width: 100%;
+}
+
+.main-content {
+    flex: 1; 
+}
+
 @media (max-width: 768px) {
+    .parent-container {
+        flex-direction: column;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        gap: 15px;
+    }
+
     .container {
         flex-direction: column;
-        order: 2;
-    }
-
-    .header-image { 
-        padding: 1px; 
-        margin-bottom: 20px; 
-        margin-top: -58px;
-        width: calc(100% - 48px);
-    }
-     .header-json { 
-        padding: 1px; 
-        margin-bottom: 20px; 
-        margin-top: -20px;
-        width:  calc(100% - 44px);
-    }
-
-    .main-content {
-        order: 1;
-        padding: 1rem;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        gap: 15px;
     }
 
     .main-sidebar {
-        order: 2;
-        padding: 1rem;
-        width: 96%;
+        width: 100%;
+        max-width: none;
+        margin: 0;
+        padding: 0;
+        gap: 20px;;
+    }
+
+    .header-image {
+        padding: 15px;
+    }
+
+    .social-sidebar {
+        margin: 0 0 15px 0;
+        padding: 15px;
+        margin-bottom: -20px ;
+    }
+
+    .footer {
+        margin: 0px;
+        padding: 15px;
+    }
+    body {
+        padding: 15px;
+        margin: 0;
+    }
+
+    .main-content {
+        margin-bottom: -40px;
+    }
+    .content-yaml, pre {
+        width: calc(100% - 44px);
+        margin: 0 0 15px 0;
+        padding: 15px;
     }
 }
 
@@ -108,10 +148,8 @@ a:hover {
     background-position: 0 100%;
     text-decoration: none;
 }
-
-/* Sidebar Styles */
 .social-sidebar {
-    width: calc(100% - 44px);  /* Account for padding */
+    width: calc(100% - 44px);
     padding: 20px;
     background-color: var(--sidebar-bg);
     border-radius: 8px;
@@ -127,7 +165,7 @@ a:hover {
 }
 
 .footer {
-    width: calc(100% - 44ppx);  /* Account for padding */
+    width: calc(100% - 14px);
     text-align: center;
     border-radius: 4px;
     color: var(--key-color);
@@ -138,7 +176,6 @@ a:hover {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-left: 4px solid var(--link-color);
     border-radius: 8px;
-
 }
 
 .footer > a {
